--- a/HueFes/appsettings.json
+++ b/HueFes/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "HueFes": "Server=localhost;Database=HueFes_db;TrustServerCertificate=True;Trusted_Connection=True;MultipleActiveResultSets=True"
   },
+  "JwtConfig": {
+    "Secret": "hhifanpmhlmnelosuigugcyrgfbhdqun",
+    "Issuer": "HueFes",
+    "Audience": "HueFes"
+  },
   "AllowedHosts": "*"
 }
